--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <h1>Hello HTML!</h1>
-    <p>some text</p>
+    <header>
+        <h1>Hello HTML!</h1>
+        <p>some text</p>
+    </header>
 </body>
 
 </html>
