task-3. all tags which i remembered

--- a/index.html
+++ b/index.html
@@ -10,9 +10,106 @@
 
 <body>
     <header>
-        <h1>Hello HTML!</h1>
-        <p>some text</p>
+        <h1>Hello HTML</h1>
+
+        <h2>Hello CSS</h2>
+
+        <h3>Hello GIT</h3>
+
+        <h4>Hello JS</h4>
+
+        <h5>Hello Node.js</h5>
     </header>
+
+    <main>
+        <p>some text</p>
+
+        <ol>
+            <li>one</li>
+            <li>two</li>
+            <li>three</li>
+        </ol>
+
+        <nav>
+            <ul>
+                <li>four</li>
+                <li>five</li>
+                <li>six</li>
+            </ul>
+        </nav>
+
+        <button type="button">
+            Click
+        </button>
+
+        <br>
+
+        <aside>
+            <form action="#">
+                <input type="search" name="search" id="search" placeholder="Write something" required>
+                <button type="submit">submit</button>
+            </form>
+
+            <form action="#">
+                <input id="sometext" type="text" placeholder="put some text" required>
+                <button type="submit">submit</button>
+            </form>
+        </aside>
+
+        <br>
+
+        <section>
+            <label for="click">
+                <input id="click" value="click" type="radio" name="click-unclick" required > Click
+            </label>
+
+            <label for="unclick">
+                <input id="unclick" value="unclick" type="radio" name="click-unclick" required> Unclick
+            </label>
+
+            <hr>
+
+            <label for="check">
+                <input id="check" value="check" type="checkbox" name="check-uncheck" required > Check
+            </label>
+
+            <label for="uncheck">
+                <input id="uncheck" value="uncheck" type="checkbox" name="check-uncheck" required> Uncheck
+            </label>
+        </section>
+
+        <span>bla bla bla</span>
+
+        <a href="#">This <sup>is</sup> <strong>the best</strong><i> link</i> <sub>ever</sub></a>
+
+        <table>
+            <caption>count table</caption>
+            <thead>
+                <tr>
+                    <th>strong</th>
+                    <td>not strong</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>1 2 3</th>
+                    <td>4 5 6</td>
+                </tr>
+                <tr>
+                    <th>7 8 9</th>
+                    <td>10 11 12</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/4JkIs37a2JE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </main>
+
+    <footer>
+        <div>
+            <img src="img/ukraine.jpeg" height="500px" width="800px" alt="some pic">
+        </div>
+    </footer>
 </body>
 
 </html>
